examples/st2110/invalid/03_missing_fmtp.sdp
v=0
o=- 1002 1 IN IP4 192.168.1.1
s=ST2110 Missing fmtp
t=0 0
m=video 5000 RTP/AVP 96
c=IN IP4 239.100.0.1/64
a=rtpmap:96 raw/90000
a=mediaclk:direct=0
a=ts-refclk:ptp=IEEE1588-2008:AA-BB-CC-DD-EE-FF-00-11:0
